# acidni-support

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
api/: __init__.py  auth.py  config.py  main.py  models.py
api/config/: support-routing.yaml
api/routes/: health.py  landing.py  support.py  widget.py
api/services/: cosmos_service.py  devops_client.py  licensing_service.py  notification_service.py  routing_service.py
docs/: ARCHITECTURE.md  integration-guide.md
tests/: test_devops_client.py  test_routing.py  test_submit.py  test_widget_config.py
widget/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json
widget/src/: index.ts  styles.ts
